- Enable use of TLSv1.1 and TLSv1.2 for IMAP (#1490640)
- Fix XSS issue in SVG images handling (#1490625)
- Fix (again) security issue in DBMail driver of password plugin [CVE-2015-2181] (#1490643)
- Fix bug where Archive/Junk buttons were not active after page jump with select=all mode (#1490647)
- Fix bug in long recipients list parsing for cases where recipient name contained @-char (#1490653)

RELEASE 1.0.8
-------------
- Add workaround for https://bugs.php.net/bug.php?id=70757 (#1490582)
- Fix HTML sanitizer to skip <!-- node type X --> in output (#1490583)
- Fix charset encoding of message/rfc822 part bodies (#1490606)
- Fix handling of message/rfc822 attachments on replies and forwards (#1490607)
- Fix PDF support detection in Firefox > 19 (#1490610)
- Fix path traversal vulnerability (CWE-22) in setting a skin (#1490620)
- Fix so drag-n-drop of text (e.g. recipient addresses) on compose page actually works (#1490619)
- Fix .htaccess rewrite rules to not block .well-known URIs (#1490615)

RELEASE 1.0.7
-------------
- Get rid of Mail_mimeDecode package dependency (#1490416)
- Fix compatibility with Net_SMTP > 1.6.3 and Mail_Mime >= 1.9.0
- Fix SQL error on logout when using session_storage=php (#1490421)
- Fix so plain text signature field uses monospace font (#1490435)
- Fix draft removal after a message is sent and storing sent message is disabled (#1490467)
- Fix handling of plus character in mailto: links (#1490510)
- Fix so adding CC/BCC recipients from the sidebar unhides compose form fields in Classic skin (#1490472)
- Fix so gc.sh script removes also expired sessions from sql database (#1490512)
- Fix support for Mozilla-based browsers, e.g. Pale Moon (#1490517)
- Fix various issues with Turkish (and similar) locales (#1490519)
- Fix so In-Reply-To header is set also for MDN receipts (#1490523)
- Fix XSS issue in drag-n-drop file uploads (#1490530)