@@ -16,7 +16,7 @@
  <date>2013-08-25</date>
  <version>
   <release>1.2.0</release>
-  <api>1.2.0</api>
+  <api>1.2.1</api>
  </version>
  <stability>
   <release>stable</release>
