@@ -6,6 +6,7 @@ CHANGELOG Roundcube Webmail
 - Fix (again) security issue in DBMail driver of password plugin [CVE-2015-2181] (#1490643)
 - Fix bug where Archive/Junk buttons were not active after page jump with select=all mode (#1490647)
 - Fix bug in long recipients list parsing for cases where recipient name contained @-char (#1490653)
+- Fix additional_message_headers plugin compatibility with Mail_Mime >= 1.9 (#1490657)
 
 RELEASE 1.0.8
 -------------
